<resources>
    <string name="app_name">Bee+</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_my_profile">My Profile</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_activities">Activities</string>
    <string name="menu_food">Food</string>
    <string name="menu_day_test">Daily Test</string>
    <string name="menu_week_test">Weekly Test</string>
    <string name="menu_progress">Progress</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_quit">Quit</string>

    <string name="question_1">1. I can find something positive in even the most difficult situations.</string>
    <string name="question_2">2. I actively keep in touch with friends and family.</string>
    <string name="question_3">3. I feel lonely.</string>
    <string name="question_4">4. When times get tough, I turn to friends/family for support.</string>
    <string name="question_5">5. When I find myself overwhelmed with stress, I shut down completely.</string>
    <string name="question_6">6. When I\'m feeling down, I remind myself to focus on the good things in my life instead of the bad.</string>
    <string name="question_7">7. When I have a difficult problem, I try to look at it from different angles in order to come up with a solution.</string>
    <string name="question_8">8. I refuse to give up, no matter how tough things get.</string>
    <string name="question_9">9. I believe that what can go wrong will go wrong.</string>
    <string name="question_10">10. I am grateful for what I have, and appreciate it.</string>
    <string name="question_11">11. I have a positive image of myself.</string>
    <string name="question_12">12. I try to eat healthy and exercise for my health.</string>
    <string name="question_13">13. Life is good.</string>
    <string name="question_14">14. I think the world is a good place.</string>
    <string name="question_15">15. I have very warm feelings towards almost everyone.</string>
    <string name="question_16">16. Do you have people you can talk to who understand what you\’re going through? If you don\’t think so, why do you think that\’s the case?</string>
    <string name="question_17">17. If you share your problems with people, how do you think they will react?</string>
    <string name="question_18">18. What changes can help you feel better right now?</string>
    <string name="question_19">19. Imagine you have all the money in the world for a week. You don\’t have to study, you don\’t have to work, anything is inside your hands. How would you spend this week?</string>
    <string name="question_20">20. It is summer and you\'re at the seaside. Feeling the warmness of the sand under your feet you\'re walking towards your family and friends. As you come closer you see that they\'re smiling happily and laughing. What might be the reason for their happiness?</string>
    <string name="question_21">21. Do you feel tired no matter how much you sleep? What kind of activities may improve your sleep quality and energize you?</string>

    <string name="answer_1">Almost never</string>
    <string name="answer_2">Rarely</string>
    <string name="answer_3">Sometimes</string>
    <string name="answer_4">Often</string>
    <string name="answer_5">Most of the time</string>
    <string name="answer_6">Please write your answer here</string>

    <string name="daily_question_1">Write the happiest moment you have today.</string>
    <string name="daily_question_2">Write down one of the happiest moments you\'ve had this week.</string>
    <string name="daily_question_3">Write one of the happiest moments you\'ve ever had in your life.</string>

    <string name="user_name_nav">%s </string>
    <string name="user_mail_nav">%s </string>


    <string name="activity">Activities</string>
    <string name="activities_1">Cooking</string>
    <string name="activities_2">Eating</string>
    <string name="activities_3">Painting</string>
    <string name="activities_4">Keep A Diary</string>
    <string name="activities_5">Take a Rest</string>
    <string name="activities_6">Take a Vacation</string>
    <string name="activities_7">Read a Book</string>
    <string name="activities_8">Sunbathe</string>
    <string name="activities_9">Develop a Hobby</string>
    <string name="activities_10">Listen to Music</string>
    <string name="activities_11">Personal Care</string>
    <string name="activities_12">Volunteer a Work</string>
    <string name="activities_13">Gardening</string>
    <string name="activities_14">Watching Tv</string>
    <string name="activities_15">Have a Massage</string>
    <string name="activities_16">Meditation</string>
    <string name="activities_17">Dancing</string>
    <string name="activities_18">Sport</string>

    <string name="food">Foods</string>
    <string name="food_1">Fish</string>
    <string name="food_2">White Meats</string>
    <string name="food_3">Red Meats</string>
    <string name="food_4">Vegetables</string>
    <string name="food_5">Fruits</string>
    <string name="food_6">Milk Products</string>
    <string name="food_7">Honey</string>
    <string name="food_8">Seeds</string>
    <string name="food_9">Eggs</string>
    <string name="food_10">Dried Nuts</string>
    <string name="food_11">Fast Food</string>
    <string name="food_12">Cacao</string>
    <string name="food_13">Animal Fat</string>
    <string name="food_14">Herbal Oil</string>
    <string name="food_15">Organ Meats</string>
    <string name="food_16">Coffee</string>
    <string name="food_17">Tea</string>
    <string name="food_18">Kebab</string>
    <string name="food_19">Sweet</string>

    <string name="points">Points</string>
    <string name="fish">~455 Points</string>
    <string name="white_meats">~430 Points</string>
    <string name="milk_products">~415 Points</string>
    <string name="red_meat">~425 Points</string>
    <string name="honey">~485 Points</string>
    <string name="egg">~425 Points</string>
    <string name="organ_meats">~425 Points</string>
    <string name="animal_fat">~345 Points</string>
    <string name="seeds">~215 Points</string>
    <string name="dried_nuts">~440 Points</string>
    <string name="vegetables">~155 Points</string>
    <string name="grains">~205 Points</string>
    <string name="fruits">~365 Points</string>
    <string name="cacao">~670 Points</string>
    <string name="herbal_oil">~120 Points</string>
    <string name="fast_food">~425 Points</string>
    <string name="kebab">~425 Points</string>
    <string name="coffee">~155 Points</string>
    <string name="tea">~155 Points</string>
    <string name="sweet">~650 Points</string>

    <string name="eating">~700 Points</string>
    <string name="painting">~400 Points</string>
    <string name="diary">~650 Points</string>
    <string name="read_book">~450 Points</string>
    <string name="cooking">~750 Points</string>
    <string name="hobby">~750 Points</string>
    <string name="personal_care">~450 Points</string>
    <string name="massage">~800 Points</string>
    <string name="meditation">~800 Points</string>
    <string name="sport">~900 Points</string>
    <string name="dancing">~800 Points</string>
    <string name="vacation">~850 Points</string>
    <string name="gardening">~750 Points</string>
    <string name="listen_music">~700 Points</string>
    <string name="volunteer">~800 Points</string>
    <string name="have_a_rest">~700 Points</string>
    <string name="sunbathe">~750 Points</string>
    <string name="tv">~180 Points</string>

</resources>
