<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_my_profile" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_activities" />
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_food" />
        <item
            android:id="@+id/nav_hap_test"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_hap_test" />
        <item
            android:id="@+id/nav_progress"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_progress" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_logout" />

    </group>

</menu>
